# copilot-test-ktruchcz

./: .gitignore  ARC42_DOCUMENTATION.md  CMakeLists.txt  HelloWorld.java  README.md  agent-log.txt  analysis_results.json  apps_db_complete_short.xlsx  arc42-architecture.md  arc42-documentation.md  arc42.md  architecture_diagrams.md  ast_analysis.json  bpmn_diagrams.md  business_rules_extractor_analysis.json  code_assessment.json  code_assessment.md  database_schema.sql  documentation_analysis.md  documentation_report.md  executive_summary.md  generate_portfolio_analysis.py  hello_world.py  pom.xml  portfolio-discovery.md  portfolio_analysis.py  portfolio_html_reports.py  portfolio_pipeline.py  pyproject.toml  schema_documentation.md  schema_metadata.json  setup.cfg  setup.py  test_hello_world.py  uml_diagrams.md
output/: FILES_CREATED.txt  WORKFLOW_EXECUTION_SUMMARY.md  analysis-report.md  analysis.md  checklist.md  hello_world.py  migrated_code.md  migration-report.md  plan.md  pyproject.toml  test_hello_world.py  validation-report.md  validation_report.md
output/00_monitoring/: analysis_summary.json  run_log.json
output/HelloWorldCSharp/: HelloWorld.sln
output/applications/: consolidated_applications_overview.json
output/business_case_results/: business_case.json
output/complexity_results/: complexity_app001.json  complexity_app002.json  complexity_app003.json  complexity_app004.json  complexity_app005.json  complexity_app006.json  complexity_app007.json  complexity_app008.json  complexity_app009.json  complexity_app010.json  complexity_app011.json  complexity_app012.json  complexity_app013.json  complexity_app014.json  complexity_app015.json  complexity_app016.json  complexity_app017.json  complexity_app018.json  complexity_app019.json  complexity_app020.json  complexity_app021.json  complexity_app022.json  complexity_app023.json  complexity_app024.json  complexity_app025.json  complexity_app026.json  complexity_app027.json  complexity_app028.json  complexity_app029.json  complexity_app030.json  complexity_scenarioa-test-maintain.json  complexity_scenarioa-test-transform.json
output/hello-world-cobol/: HELLOWORLD.cbl  README.md  test.sh
output/node-app/: package-lock.json  package.json
output/out_of_scope_results/: out_of_scope_app001.json  out_of_scope_app002.json  out_of_scope_app003.json  out_of_scope_app004.json  out_of_scope_app005.json  out_of_scope_app006.json  out_of_scope_app007.json  out_of_scope_app008.json  out_of_scope_app009.json  out_of_scope_app010.json  out_of_scope_app011.json  out_of_scope_app012.json  out_of_scope_app013.json  out_of_scope_app014.json  out_of_scope_app015.json  out_of_scope_app016.json  out_of_scope_app017.json  out_of_scope_app018.json  out_of_scope_app019.json  out_of_scope_app020.json  out_of_scope_app021.json  out_of_scope_app022.json  out_of_scope_app023.json  out_of_scope_app024.json  out_of_scope_app025.json  out_of_scope_app026.json  out_of_scope_app027.json  out_of_scope_app028.json  out_of_scope_app029.json  out_of_scope_app030.json  out_of_scope_scenarioa-test-maintain.json  out_of_scope_scenarioa-test-transform.json
output/reports/: portfolio_modernization_report.html  portfolio_report.html  portfolio_report.md
output/scenario_applicability_results/: scenario_assessment_app001.json  scenario_assessment_app002.json  scenario_assessment_app003.json  scenario_assessment_app004.json  scenario_assessment_app006.json  scenario_assessment_app008.json  scenario_assessment_app010.json  scenario_assessment_app011.json  scenario_assessment_app012.json  scenario_assessment_app013.json  scenario_assessment_app014.json  scenario_assessment_app015.json  scenario_assessment_app016.json  scenario_assessment_app017.json  scenario_assessment_app018.json  scenario_assessment_app019.json  scenario_assessment_app020.json  scenario_assessment_app021.json  scenario_assessment_app022.json  scenario_assessment_app023.json  scenario_assessment_app024.json  scenario_assessment_app025.json  scenario_assessment_app026.json  scenario_assessment_app027.json  scenario_assessment_app028.json  scenario_assessment_app030.json  scenario_assessment_scenarioa-test-maintain.json  scenario_assessment_scenarioa-test-transform.json
output/schemas/: application_schema.json  consolidated_application_schema.json  original_application_schema_from_apps_db_complete.json  original_application_schema_from_apps_db_complete_xlsx.json  original_application_schema_from_excel.json  schema_export.json  (+2 more)
(+979 files in other folders)
