[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hello-world"
version = "1.0.0"
description = "A simple Hello World application"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
hello-world = "hello_world:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
